# Potts_Models

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CM_sector.py  README.md  pyproject.toml
CM-example/cm-family/: plot-results.ipynb
cmake/: macos_llvm.cmake
data/structures/: README.md
docs/: MPNN_FOLDABILITY.md
pruning/: CM_example.sh  README.md  build_mask.py
scripts/: lab_plotting.py  mpnn_sweep.py  render_figures.py  render_sbm.sh  run_sbm.sh  sample_sbm.py  sample_sbm.sh  train_sbm.py
scripts/demo-SBM-CM-family/: SBM-CM-family.py  plot-results.ipynb  run-SBM-CM-family.sh
scripts/examples/cm-family/: plot-results.ipynb  run.sh
src/SBM/: provenance.py
src/SBM/MonteCarlo/MCMC_Potts/: MonteCarlo_PottsMod.cpp
src/SBM/MonteCarlo/MCMC_PottsProf/: MonteCarlo_PottsProfMod.cpp
src/SBM/SBM_GD/: SBM_proteins.py
src/SBM/utils/: mpnn_score.py  utils.py  utils_mpnn_plot.py  utils_plot.py
