[build-system]
requires = [
    "scikit-build-core>=0.7.0",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "SBM"
version = "0.0.1"
description = "Stochastic Boltzmann Machine"
authors = [{ name = "Marion" }]
requires-python = ">=3.11"
readme = "README.md"

# Runtime dependencies. Version bounds are upper-pinned to known-working
# major versions; the lock file (requirements.lock) records exact pins for
# reproducible installs.
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "biopython>=1.83",
    "tqdm>=4.66",
    "more-itertools>=10",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
plotting = [
    "seaborn>=0.13",
    "plotly>=5.18",
    "POT>=0.9",
    "PyGSP>=0.5",
]
analysis = [
    "scikit-learn>=1.4",
]
notebook = [
    "ipykernel",
    "notebook",
]
# Pruning via the SCA strategy depends on pySCA, which isn't on PyPI.
sca = [
    "pysca @ git+https://github.com/ranganathanlab/pySCA",
]
dev = [
    "pre-commit>=3.6",
    "ruff>=0.8",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/StatBio/Stochastic-Boltzmann-Machine"
Bug-Tracker = "https://github.com/StatBio/Stochastic-Boltzmann-Machine/-/issues"

[tool.scikit-build]
minimum-version = "0.7"

# IMPORTANT : activer un toolchain automatique sur macOS
cmake.args = [
    "-DCMAKE_TOOLCHAIN_FILE=cmake/macos_llvm.cmake"
]
